--- a/app/Resources/views/pagesFixes/cookies.html.twig
+++ b/app/Resources/views/pagesFixes/cookies.html.twig
@@ -31,7 +31,7 @@
                     <li>
                         <span class="heading">Cookie 1/</span>
                         <p>Il stocke des informations relatives à votre navigation sur notre site (les pages que vous avez consultées, la date et l'heure de la consultation, etc.). Nous pourrons lire ces informations lors de vos prochaines visites.
-                            La durée de conservation de ces informations dans votre ordinateur est de 1 heure. Ce cookie ne nous permet pas de vous identifier.</p>
+                            La durée de conservation de ces informations dans votre ordinateur est de 6 heures. Ce cookie ne nous permet pas de vous identifier.</p>
                     </li>
 
                     <li>
@@ -41,7 +41,7 @@
 
                 </ul>
 
-                <p>Ainsi, vous n'aurez pas besoin, lors de votre prochaine visite, de les saisir à nouveau. Nous pourrons les consulter lors de vos prochaines visites.</p>
+                <p>Ainsi, vous n'aurez pas besoin, lors de votre prochaine visite, de les saisir à nouveau.</p>
                 <p>La durée de conservation de ces informations dans votre ordinateur est illimitée à moins que vous ne les supprimiez depuis votre navigateur.</p>
                 <p>Nous vous informons que vous pouvez vous opposer à l'enregistrement de "cookies" en configurant votre navigateur de la manière suivante :</p>
 
