--- a/app/Resources/views/pagesFixes/faq.html.twig
+++ b/app/Resources/views/pagesFixes/faq.html.twig
@@ -95,10 +95,9 @@
                             l’enseignement privé catholique sont spécifiques à l’enseignement privé mais avec les mêmes
                             épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
 
-                        <p>Les inscriptions au concours sont à faire à l’automne 2017 que vous soyez en M1 ou en M2.</p>
+                        <p>Les inscriptions au concours sont à faire au début de l'année universitaire, courant Octobre, que vous soyez en M1 ou en M2.</p>
 
-                        <p>Les épreuves écrites d’admissibilité se dérouleront en avril 2018, les épreuves d’admission
-                            en juin 2018.</p>
+                        <p>Les épreuves écrites d’admissibilité se dérouleront en général au printemps et les épreuves d’admission vers la fin de l'année universitaire.</p>
 
                         <p>Les candidats ayant réussi le concours sont ensuite professeurs des écoles stagiaires et
                             enseignent dans un établissement catholique d’enseignement sous contrat. Parallèlement ils
