--- a/app/Resources/views/pagesFixes/afadecContent.html.twig
+++ b/app/Resources/views/pagesFixes/afadecContent.html.twig
@@ -108,7 +108,7 @@
                     <li><a href="{{ path('concours') }}">Concours</a></li>
                     <li><a href="{{ path('faq') }}">FAQ</a></li>
                     <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                    <li><a href="http://www.e-educmaster.com/data_AFADEC/2d_degre/accueil_CATHO.pdf">Comment s'inscrire
+                    <li><a href="{{ path('inscription') }}">Comment s'inscrire
                             ?</a></li>
                 </ul>
             </figure>
