--- a/app/Resources/views/cours/adminChat.html.twig
+++ b/app/Resources/views/cours/adminChat.html.twig
@@ -2,18 +2,18 @@
     data-idItem="{{ chat.id }}"
     class="courseElemAdmin chatAdmin col-md-12"
     data-typeItem="chat"
-    {% if inSection == 'true' %}
-        {% set isVisible = "false" %}
-        {% if  visible == 1 %}
-            {% set isVisible = "true" %}
+        {% if inSection == 'true' %}
+            {% set isVisible = "false" %}
+            {% if  visible == 1 %}
+                {% set isVisible = "true" %}
+            {% endif %}
+            data-IsVisible="{{ isVisible }}"
         {% endif %}
-        data-IsVisible="{{ isVisible }}"
-    {% endif %}
 >
     <div class="titleBar">Chat</div>
 
     {% if inSection == 'true' %}
-        {% include "cours/adminBtns.html.twig" with {visible: visible}  %}
+        {% include "cours/adminBtns.html.twig" with {visible: visible} %}
     {% else %}
         <div class="btnActionCol col-md-1">
             <ul>
@@ -34,21 +34,25 @@
                     <span>{{ administrateur.id }}</span>
                 {% endfor %}
             </div>
-            <select id="MyBtnSelectPicker{{ chat.id }}" class="selectpicker col-sm-9 col-xs-12" data-style="MyBtnSelectPicker" title="Ajouter un responsable" data-live-search="true" multiple>
+            <select id="MyBtnSelectPicker{{ chat.id }}" class="selectpicker col-sm-9 col-xs-12"
+                    data-style="MyBtnSelectPicker" title="Ajouter un responsable" data-live-search="true" multiple>
                 {% for key,user in users %}
-                    <option value="{{ user.id }}" title="{{ user.firstname }} {{ user.lastname }}" class="addNewResponsable"  data-content="<span data-idUser='{{ user.id }}'>{{ user.firstname }} {{ user.lastname }}</span>">{{ user.firstname }} {{ user.lastname }}</option>
+                    <option value="{{ user.id }}" title="{{ user.firstname }} {{ user.lastname }}"
+                            class="addNewResponsable"
+                            data-content="<span data-idUser='{{ user.id }}'>{{ user.firstname }} {{ user.lastname }}</span>">{{ user.firstname }} {{ user.lastname }}</option>
                 {% endfor %}
             </select>
         </div>
         <div class="row">
             <div class="LabelAdmin col-sm-3">Description</div>
             <div class="col-sm-9  col-xs-12 noPadding">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_chat_{{ chat.id }}_descr" class="simpleEditor editor champAdmin" readonly>{{ chat.description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_chat_{{ chat.id }}_descr"
+                          class="simpleEditor editor champAdmin" readonly>{{ chat.description }}</textarea>
             </div>
         </div>
-        <div class="row">
+        {#<div class="row">
             <div class="LabelAdmin col-sm-3">Activé</div>
             <input data-champName="enabled" class="col-xs-2" {% if chat.enabled %}checked{% endif %} type="checkbox" />
-        </div>
+        </div>#}
     </div>
 </li>
