--- a/app/Resources/views/cours/adminChat.html.twig
+++ b/app/Resources/views/cours/adminChat.html.twig
@@ -50,9 +50,9 @@
                           class="simpleEditor editor champAdmin" readonly>{{ chat.description }}</textarea>
             </div>
         </div>
-        {#<div class="row">
+        <div class="row">
             <div class="LabelAdmin col-sm-3">Activé</div>
             <input data-champName="enabled" class="col-xs-2" {% if chat.enabled %}checked{% endif %} type="checkbox" />
-        </div>#}
+        </div>
     </div>
 </li>
