--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -960,6 +960,7 @@ td.celluleAssocCorCopie{
 }
 .chatIHM .msgChat{
     padding: 5px 0;
+    position: relative;
 }
 .chatIHM .userTDchat{
     width: 140px;
@@ -970,6 +971,21 @@ td.celluleAssocCorCopie{
 .zoneBtnGestionChat{
     text-align: center;
     padding: 15px;
+}
+
+.chatDisabledMsg{
+    padding: 20px;
+    font-size: 20px;
+}
+.animatedPostRow{
+    opacity: .3;
+    background-color: blue;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -10px;
+    bottom: 0;
+    border-radius: 10px;
 }
 
 /* Emailing */
